fixed the game screen from overflowing width

--- a/frontend/src/components/Game/Game.css
+++ b/frontend/src/components/Game/Game.css
@@ -1,6 +1,6 @@
 .game-screen {
   display: grid;
-  width: 100vw;
+  width: 100%;
   height: 90vh;
   grid-template-rows: 65vh 20vh 5vh;
   place-items: center;
